<resources>
    <string name="app_name">Vica</string>
    <string name="vica_restaurant">Vica Restaurant</string>

    <!-- User info -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="user_level">User level</string>
    <string name="confirm_email">Confirm email</string>
    <string name="confirm_password">Confirm pw</string>
    <string name="api_23_phone1">+15555215554</string>

    <!-- Restaurant info -->
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="restaurant_type">Restaurant type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="restaurant_friend_invited">Friends invited</string>

    <!-- Navigation -->
    <string name="main_menu">Main Menu</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign up</string>
    <string name="create_account">Create account</string>
    <string name ="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="book_table">Book a table</string>
    <string name="manage_friends">Manage friends</string>
    <string name ="manage_restaurants">Manage restaurants</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="choose_date">Choose a date</string>
    <string name="choose_time">Choose a time</string>
    <string name="preferences">Preferences</string>
    <string name="booking_friend_selection">Select friends</string>
    <string name="booking_confirm_button">Confirm booking</string>
    <string name="booking_cancel_button">Cancel booking</string>

    <!--Confirmation Messages-->
    <string name="confirmation_quit1">Really quit?</string>

    <!--Validation Messages-->
    <string name="validating">Validating…</string>
    <string name="authenticating">Authenticating…</string>
    <string name="ordering">Ordering…</string>
    <string name="error_first_name">Invalid first name</string>
    <string name="error_last_name">Invalid last name</string>
    <string name="error_phone">Must be 8 digits</string>
    <string name="error_email1">Invalid email</string>
    <string name="error_email2">Emails must match</string>
    <string name="error_email3">Email is already in use</string>
    <string name="error_password1">Must be 6–20 characters, at least one number and at least one letter</string>
    <string name="error_password2">Passwords must match</string>
    <string name="error_login">Invalid email or password</string>
    <string name="error_signup1">Please complete the form before submitting</string>
    <string name="error_signup2">Database error</string>
    <string name="error_res_name">Invalid restaurant name</string>
    <string name="error_res_address">Invalid restaurant address</string>
    <string name="error_res_type">Invalid restaurant type</string>
    <string name="ok_signup">Signup successful</string>
    <string name="ok_logout">Logout successful</string>
    <string name="friends_notified">Friends notified</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="periodic_disabled">Periodic service disabled</string>
    <string name="order_failed">Failed to create order.</string>

    <!--Preferences-->
    <string name="personal">Personal</string>
    <string name="personal_reminder">Personal reminder</string>
    <string name="personal_reminder_summary">Reminder of today\'s appointments</string>
    <string name="personal_reminder_message">You have upcoming appointments</string>
    <string name="personal_reminder_message2">You have one or more appointments today!</string>
    <string name="social">Social</string>
    <string name="notify_friends">Notify friends</string>
    <string name="notify_friends_summary">Notify invited friends by SMS</string>
    <string name="notify_friends_message">Notification message</string>
    <string name="notify_friends_message_summary">Customize the text in your friend notification</string>
    <string name="notify_friends_message_default">Your friend has booked a table and invited you!</string>
    <string name="global">Global</string>
    <string name="notify_friends_and_personal_reminder_timing">Timing</string>
    <string name="notify_friends_and_personal_reminder_timing_summary">Control time of day for personal reminder and friends being notified (hh:mm)</string>
    <string name="timing_default">17:00</string>
    <string name="timer_set">reminder set for </string>

    <!--Bundle to broadcast strings-->
    <string name="friendSelectedListArray">friendSelectedListArray</string>

    <!--User-table database Strings-->
    <string name="USER_ID">Email</string>
    <string name="USER_LEVEL">Userlevel</string>
    <string name="USER_FIRSTNAME">Firstname</string>
    <string name="USER_LASTNAME">Lastname</string>
    <string name="USER_PHONE">Phonenumber</string>
    <string name="USER_PASSWORD">Password</string>

    <!--Friend-table database Strings-->
    <string name="FRIEND_ID">_id</string>
    <string name="FRIEND_FIRSTNAME">Firstname</string>
    <string name="FRIEND_LASTNAME">Lastname</string>
    <string name="FRIEND_PHONE">Phonenumber</string>
    <string name="FRIEND_FK">UserEmail</string>

    <!--Restaurant-table database Strings-->
    <string name="RESTAURANT_ID">_id</string>
    <string name="RESTAURANT_NAME">Name</string>
    <string name="RESTAURANT_ADDRESS">Address</string>
    <string name="RESTAURANT_PHONE">Phonenumber</string>
    <string name="RESTAURANT_TYPE">Type</string>

    <!--Order n Orderline-table database Strings-->
    <string name="ORDER_ID">_id</string>
    <string name="ORDER_DATE">Date</string>
    <string name="ORDER_TIME">Time</string>
    <string name="ORDER_UserFK">UserID</string>
    <string name="ORDER_RestaurantFK">RestaurantID</string>

    <string name="ORDERLINE_OrderFK">OrderID</string>
    <string name="ORDERLINE_FriendFK">FriendID</string>
    <string name="order_history">Order history</string>
    <string name="Restaurant_booking_orders">Restaurant Booking Orders</string>
    <string name="order_details">Details</string>
    <string name="DB_Error_Message">No database/content provider detected!</string>

</resources>
