<?xml version="1.0" encoding="utf-8"?>
<android.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <PreferenceCategory
        android:title="@string/personal">
        <SwitchPreference
            android:title="@string/personal_reminder"
            android:summary="@string/personal_reminder_summary"
            android:key="@string/personal_reminder"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/social">
        <SwitchPreference
            android:title="@string/notify_friends"
            android:summary="@string/notify_friends_summary"
            android:key="@string/notify_friends"/>
            <EditTextPreference
                android:title="@string/notify_friends_message"
                android:summary="@string/notify_friends_message_summary"
                android:key="@string/notify_friends_message"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/global">
        <EditTextPreference
            android:title="@string/timing"
            android:summary="@string/timing_summary"
            android:key="@string/timing"/>
    </PreferenceCategory>
</android.preference.PreferenceScreen>