<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="40dp">

            <ImageView
                android:id="@+id/signup_image"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <!--  Name Label -->
            <EditText
                android:id="@+id/signup_first_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/signup_image"
                android:layout_marginStart="0dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/first_name"
                android:inputType="textPersonName">
            </EditText>

            <EditText
                android:id="@+id/signup_last_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/signup_image"
                android:layout_marginEnd="0dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/last_name"
                android:inputType="textPersonName">
            </EditText>

            <EditText
                android:id="@+id/signup_phone"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_first_name"
                android:layout_centerHorizontal="true"
                android:hint="@string/phone"
                android:inputType="phone">
            </EditText>

            <!-- Email Label -->
            <EditText
                android:id="@+id/signup_email"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_phone"
                android:layout_centerHorizontal="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress">
            </EditText>

            <EditText
                android:id="@+id/signup_confirm_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_email"
                android:layout_centerHorizontal="true"
                android:hint="@string/confirm_email"
                android:inputType="textEmailAddress">
            </EditText>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/signup_first_name"
                android:layout_below="@+id/signup_confirm_email"
                android:hint="@string/password"
                android:inputType="textPassword">
            </EditText>

            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/signup_last_name"
                android:layout_below="@+id/signup_confirm_email"
                android:hint="@string/confirm_password"
                android:inputType="textPassword">
            </EditText>

            <!-- Signup Button -->
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/signup_password"
                android:background="@drawable/button_primary"
                android:padding="12dp"
                android:text="@string/signup"
                android:theme="@style/ButtonTheme"
                android:onClick="signup_button"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>