<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="15dp"
    android:theme="@style/AppTheme">
    <TextView
        android:id="@+id/booking_dialog_restaurant_name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/restaurant_name"/>
    <TextView
        android:id="@+id/booking_dialog_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/listview_border"/>

    <TextView
        android:id="@+id/booking_dialog_restaurant_date1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/booking_dialog_restaurant_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/listview_border"/>

    <TextView
        android:id="@+id/booking_dialog_restaurant_time1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/time"/>
    <TextView
        android:id="@+id/booking_dialog_restaurant_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/listview_border"/>

    <TextView
        android:id="@+id/booking_dialog_friend_quantity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/restaurant_friend_invited"/>
    <TextView
        android:id="@+id/booking_dialog_friend_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/listview_border"/>

    <Button
        android:id="@+id/booking_dialog_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_primary"
        android:text="@string/booking_confirm_button"
        android:theme="@style/ButtonTheme" />
    <Button
        android:id="@+id/booking_dialog_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_primary"
        android:text="@string/booking_cancel_button"
        android:theme="@style/ButtonTheme" />

</LinearLayout>