<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="15dp">

    <!-- First Name Label -->
    <EditText
        android:id="@+id/friend_dialog_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -'"
        android:hint="@string/first_name"
        android:inputType="textPersonName">
    </EditText>

    <!-- Last Name Label -->
    <EditText
        android:id="@+id/friend_dialog_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/friend_dialog_first_name"
        android:layout_marginTop="14dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -'"
        android:hint="@string/last_name"
        android:inputType="textPersonName">
    </EditText>

    <!-- Phone Label -->
    <EditText
        android:id="@+id/friend_dialog_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_dialog_last_name"
        android:layout_marginTop="14dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/phone"
        android:inputType="phone">
    </EditText>

    <!-- Add Friend Button -->
    <Button
        android:id="@+id/friend_dialog_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/friend_dialog_phone"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_primary"
        android:text="@string/add_friend"
        android:theme="@style/ButtonTheme" />

</RelativeLayout>