<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="40dp">
        <ListView
            android:id="@+id/restaurant_list"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/friend_listview_border"
            android:listSelector="@color/colorPrimaryFade">
        </ListView>
        <Button
            android:id="@+id/restaurant_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_list"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="25dp"
            android:padding="12dp"
            android:text="@string/add"
            android:background="@drawable/button_primary"
            android:theme="@style/ButtonTheme"/>
        <Button
            android:id="@+id/restaurant_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_add_button"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/delete"
            android:background="@drawable/button_primary"
            android:theme="@style/ButtonTheme"/>
        <Button
            android:id="@+id/restaurant_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_delete_button"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/edit"
            android:background="@drawable/button_primary"
            android:theme="@style/ButtonTheme"/>
    </RelativeLayout>
</LinearLayout>